--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Do Now</title>
   </head>
   <body>
-    <h1 style="color:#5a93cd">oof minecraft</h1>
+    <h1 style="color:#5a93cd">fhdfh</h1>
     <table border="10" style="border-color:rgb(140,69,100); width:100%; height:500px">
 
 <tr style="height: 25px;">
-  <th style="height:30px;">Creeper Aww Man</th>
+  <th style="height:30px;">yjjr</th>
   </body>
 </html>
