--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
     <title>Do Now</title>
   </head>
   <body>
-    <h1 style="color:#5a93cd">fhdfh</h1>
-    <table border="10" style="border-color:rgb(140,69,100); width:100%; height:500px">
+   <div class="month">
+  <ul>
+    <li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>
+    <li>August<br><span style="font-size:18px">2021</span></li>
+  </ul>
+</div>
 
-<tr style="height: 25px;">
-  <th style="height:30px;">yjjr</th>
+<ul class="weekdays">
+  <li>Mo</li>
+  <li>Tu</li>
+  <li>We</li>
+  <li>Th</li>
+  <li>Fr</li>
+  <li>Sa</li>
+  <li>Su</li>
+</ul>
+
+<ul class="days">
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+  <li>6</li>
+  <li>7</li>
+  <li>8</li>
+  <li>9</li>
+  <li><span class="active">10</span></li>
+  <li>11</li>
+  ...etc
+</ul>
   </body>
 </html>
